--- a/templates/app.html
+++ b/templates/app.html
@@ -3,7 +3,7 @@
 <body>
 
 <h3>Nagios-audit</h3>
-<form action = "https://nagios-audit.herokuapp.com/result" method = "POST" 
+<form action = "https://nagios-audit.herokuapp.com/upload" method = "POST" 
 
      enctype = "multipart/form-data">
      <input type = "file" name = "file" />
